Add folders and files

--- a/AWS_projecto/aussichtsturm/youtube_comments_grabber/templates/frontpage/index.html
+++ b/AWS_projecto/aussichtsturm/youtube_comments_grabber/templates/frontpage/index.html
@@ -12,7 +12,7 @@
   <input id="paste_youtube_url" type="text" name="paste_youtube_url" value="{{ current_url }}">
   <br>
   <br>
-  <label for="Youtube API key">Enter Youtube API</label>
+  <label for="Youtube API">Enter Youtube API key</label>
   <br>
   <input id="paste_youtube_api" type="text" name="paste_youtube_api" value="{{ current_api }}">
   <input type="submit" value="OK">
