--- a/AWS_projecto/aussichtsturm/youtube_comments_grabber/templates/frontpage/index.html
+++ b/AWS_projecto/aussichtsturm/youtube_comments_grabber/templates/frontpage/index.html
@@ -9,12 +9,12 @@
   {% csrf_token %}
   <label for="Youtube URL">Enter Youtube URL</label>
   <br>
-  <input id="paste_youtube_url" type="text" name="paste_youtube_url" value="{{ current_url }}">
+  <input id="paste_youtube_url" type="text" name="paste_youtube_url">
   <br>
   <br>
   <label for="Youtube API">Enter Youtube API key</label>
   <br>
-  <input id="paste_youtube_api" type="text" name="paste_youtube_api" value="{{ current_api }}">
+  <input id="paste_youtube_api" type="text" name="paste_youtube_api">
   <input type="submit" value="OK">
 </form>
 {% endblock content %}
